Fix radio button align

--- a/static/style.css
+++ b/static/style.css
@@ -238,12 +238,16 @@ button:hover {
 }
 
 .radio-group {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     margin: 15px 0;
-    text-align: left;
+    flex-direction: column;
+    column-gap: 20px;
+    row-gap: 10px;
 }
 
 .radio-group label {
     cursor: pointer;
     font-weight: bold;
+    text-align: center;
 }
